<resources>
    <string name="app_name">Calculadora</string>
    <string name="borrar">Borrar</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_point">point</string>
    <string name="button_percent">percent</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">×</string>
    <string name="button_divide">÷</string>
    <string name="button_equals">=</string>
    <string name="button_clear">C</string>
    <string name="button_negative">negative</string>
    <string name="button_delete">backspace</string>
    <string name="valorDefault">0</string>
    <string name="Trigonometricas">Trigonometricas</string>
    <string name="extra">Extras Trig.</string>
    <string name="button_sen">seno</string>
    <string name="button_cos">coseno</string>
    <string name="button_tan">tangente</string>
    <string name="button_potencia">Potencia</string>
    <string name="button_raiz">Raiz</string>

    <string-array name="funciones">
        <item>Funciones Trigonometricas</item>
        <item>ASen</item>
        <item>ACos</item>
        <item>ATan</item>
    </string-array>

</resources>