<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/button_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_clear"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/ce"
                android:tag="C" />

            <ImageButton
                android:id="@+id/button_negative"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_negative"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/negative"
                android:tag="*(-1)" />

            <ImageButton
                android:id="@+id/button_percent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_percent"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/percent"
                android:tag="%" />

            <ImageButton
                android:id="@+id/button_divide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_divide"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/divide"
                android:tag="/" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/button_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_7"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/_7"
                android:tag="7" />

            <ImageButton
                android:id="@+id/button_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_8"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/_8"
                android:tag="8" />

            <ImageButton
                android:id="@+id/button_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_9"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/_9"
                android:tag="9" />

            <ImageButton
                android:id="@+id/button_multiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_multiply"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/multiply"
                android:tag="*" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/button_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_4"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/_4"
                android:tag="4" />

            <ImageButton
                android:id="@+id/button_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_5"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/_5"
                android:tag="5" />

            <ImageButton
                android:id="@+id/button_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_6"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/_6"
                android:tag="6" />

            <ImageButton
                android:id="@+id/button_minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_minus"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/minus"
                android:tag="-" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/button_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_1"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/_1"
                android:tag="1" />

            <ImageButton
                android:id="@+id/button_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_2"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/_2"
                android:tag="2" />

            <ImageButton
                android:id="@+id/button_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_3"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/_3"
                android:tag="3" />

            <ImageButton
                android:id="@+id/button_plus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_plus"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/plus"
                android:tag="+" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/button_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="2.2"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_0"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/_0"
                android:tag="0" />

            <ImageButton
                android:id="@+id/button_point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="2.2"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_point"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/point"
                android:tag="." />

            <ImageButton
                android:id="@+id/button_equals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1.2"
                android:background="@drawable/rounded_button_background2"
                android:contentDescription="@string/button_equals"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/equals"
                android:tag="=" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>