<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/scientific_mode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/layoutSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/Trigonometricas"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/extra"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/extra" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/layoutRbtns"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/rbtnRad"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbtnRad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Radianes"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rbtnGrados"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Grados"
                        android:textSize="15sp" />
                </RadioGroup>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <ImageButton
                android:id="@+id/button_seno"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_sen"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/seno"
                android:tag="Sen" />

            <ImageButton
                android:id="@+id/button_cos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_cos"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/cos"
                android:tag="Cos" />

            <ImageButton
                android:id="@+id/button_tan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_tan"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/tan"
                android:tag="Tan" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <ImageButton
                android:id="@+id/button_raiz"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_sen"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/raiz"
                android:tag="Raiz" />

            <ImageButton
                android:id="@+id/button_pow"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="#2D2F31"
                android:contentDescription="@string/button_potencia"
                android:cropToPadding="false"
                android:padding="@dimen/button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/potencia"
                android:tag="Potencia ^2" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
